# llm_adapter

./: .gitignore  Cargo.toml  README.md
crates/llm_adapter/: Cargo.toml
crates/llm_adapter/src/: lib.rs  middleware.rs  router.rs  schema.rs  test_support.rs
crates/llm_adapter/src/backend/: dispatch.rs  mod.rs  tests.rs  types.rs
crates/llm_adapter/src/backend/client/: reqwest.rs  shared.rs  ureq.rs
crates/llm_adapter/src/backend/request_layer/: anthropic_vertex.rs  cloudflare_workers_ai.rs  gemini_vertex.rs  mod.rs  responses.rs
crates/llm_adapter/src/core/: chat.rs  embedding.rs  image.rs  mod.rs  model_registry.rs  prompt.rs  prompt_template.rs  request_builder.rs  rerank.rs  stream.rs  structured.rs
crates/llm_adapter/src/core/model_catalog/: anthropic.rs  deepseek.rs  gemini.rs  helpers.rs  kimi.rs  mod.rs  openai.rs  opencode.rs  other.rs
crates/llm_adapter/src/protocol/: common.rs  error.rs  mod.rs  tests.rs
crates/llm_adapter/src/protocol/anthropic/: common.rs  request.rs  response.rs
crates/llm_adapter/src/protocol/fal/: mod.rs  options.rs
crates/llm_adapter/src/protocol/gemini/: common.rs  embedding.rs  image.rs  mod.rs  request.rs  response.rs
crates/llm_adapter/src/protocol/openai/: common.rs  embedding.rs  images.rs  mod.rs
crates/llm_adapter/src/protocol/openai/chat/: mod.rs  request.rs  rerank.rs  response.rs
crates/llm_adapter/src/protocol/openai/responses/: request.rs  response.rs
crates/llm_adapter/src/stream/: encode.rs  mod.rs  parse.rs
crates/llm_runtime/: Cargo.toml
crates/llm_runtime/src/: host.rs  lib.rs  loop.rs  plan.rs  recipe.rs  replay.rs  round.rs  tool_call.rs  types.rs
src/: core.rs  lib.rs  middleware.rs  router.rs  test_support.rs
src/backend/: client.rs  dispatch.rs  mod.rs  tests.rs  types.rs
src/backend/client/: mod.rs  shared.rs  ureq.rs
src/backend/request_layer/: anthropic.rs  chat_completions.rs  cloudflare_workers_ai.rs  gemini_api.rs  gemini_vertex.rs  mod.rs  responses.rs  vertex.rs
src/protocol/: common.rs  mod.rs  tests.rs  utils.rs
src/protocol/anthropic/: common.rs  mod.rs  request.rs  response.rs
src/protocol/gemini/: common.rs  embedding.rs  mod.rs  request.rs  response.rs
src/protocol/openai/: common.rs  embedding.rs  mod.rs
src/protocol/openai/chat/: request.rs  response.rs
src/protocol/openai/responses/: request.rs  response.rs
src/stream/: encode.rs  mod.rs  parse.rs  rewrite.rs  sse.rs
