[workspace]
default-members = ["crates/llm_adapter"]
members         = ["crates/llm_adapter", "crates/llm_runtime"]
resolver        = "3"

    [workspace.package]
    authors     = ["DarkSky <darksky2048@gmail.com>"]
    description = "A Rust library for adapting various language model APIs to a unified interface."
    edition     = "2024"
    keywords    = ["llm", "language-model", "adapter", "api-client"]
    license     = "AGPL-3.0-only"
    repository  = "https://github.com/darkskygit/llm_adapter"

    [workspace.dependencies]
    anyhow = "1"
    base64 = "0.22"
    clap = { version = "4", features = ["derive"] }
    rand = "0.10"
    reqwest = { version = "0.13", default-features = false, features = [
        "blocking",
        "json",
        "rustls",
    ] }
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    thiserror = "2"
    toml = "0.9"
    ureq = { version = "3.2", default-features = false, features = [
        "gzip",
        "rustls",
    ] }
    url = "2.5"
