[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "llm_adapter"
readme                = "../../README.md"
repository.workspace  = true
version               = "0.1.5"

[features]
benchmark-cli  = ["dep:anyhow", "dep:clap", "dep:rand", "dep:toml"]
default        = ["reqwest-client"]
reqwest-client = ["dep:reqwest"]
ureq-client    = ["dep:ureq"]

[dependencies]
anyhow     = { workspace = true, optional = true }
base64     = { workspace = true }
clap       = { workspace = true, optional = true }
rand       = { workspace = true, optional = true }
reqwest    = { workspace = true, optional = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true, optional = true }
ureq       = { workspace = true, optional = true }
url        = { workspace = true }

[[bin]]
name              = "llm_benchmark"
path              = "src/bin/llm_benchmark.rs"
required-features = ["benchmark-cli"]

[[bin]]
name              = "llm_compat"
path              = "src/bin/llm_compat.rs"
required-features = ["benchmark-cli"]
